import {
  CategoryFilter,
  Indicator,
  LocationFilter,
  TimePeriodFilter,
} from '@common/modules/table-tool/types/filters';
import { FullTableMeta } from '@common/modules/table-tool/types/fullTable';
import { fireEvent, render } from '@testing-library/react';
import React from 'react';
import { writeFile } from 'xlsx';
import DownloadCsvButton, { getCsvData } from '../DownloadCsvButton';

jest.mock('xlsx', () => {
  const { utils } = jest.requireActual('xlsx');

  return {
    writeFile: jest.fn(),
    utils,
  };
});

describe('DownloadCsvButton', () => {
  const basicSubjectMeta: FullTableMeta = {
    geoJsonAvailable: false,
    publicationName: '',
    subjectName: '',
    footnotes: [],
    boundaryLevels: [],
    filters: {
      Characteristic: {
        name: 'characteristic',
        options: [
          new CategoryFilter({
            value: 'gender_female',
            label: 'Female',
            group: 'Gender',
            category: 'Characteristic',
          }),
        ],
      },
    },
    indicators: [
      new Indicator({
        label: 'Authorised absence rate',
        value: 'authAbsRate',
        unit: '%',
        name: 'sess_authorised_percent',
      }),
      new Indicator({
        label: 'Number of authorised absence sessions',
        value: 'authAbsSess',
        unit: '',
        name: 'sess_authorised',
      }),
    ],
    locations: [
      new LocationFilter({
        value: 'england',
        label: 'England',
        level: 'country',
      }),
    ],
    timePeriodRange: [
      new TimePeriodFilter({
        code: 'AY',
        year: 2015,
        label: '2015/16',
        order: 0,
      }),
    ],
  };

  test('calls `writeFile` when button is pressed', () => {
    const { getByText } = render(
      <DownloadCsvButton
        fileName="pupil-absence"
        fullTable={{
          subjectMeta: basicSubjectMeta,
          results: [],
        }}
      />,
    );

    fireEvent.click(
      getByText('Download the underlying data of this table (CSV)'),
    );

    const mockedWriteFile = writeFile as jest.Mock;

    expect(mockedWriteFile).toHaveBeenCalledTimes(1);
    expect(mockedWriteFile.mock.calls[0][0]).toMatchSnapshot();
    expect(mockedWriteFile.mock.calls[0][1]).toBe('pupil-absence.csv');
  });

  describe('getCsvData', () => {
    test('contains full set of data', async () => {
      const data = getCsvData({
        subjectMeta: {
          ...basicSubjectMeta,
          filters: {
            ...basicSubjectMeta.filters,
            'School Type': {
              name: 'school_type',
              options: [
                new CategoryFilter({
                  value: 'school_primary',
                  label: 'State-funded primary',
                  category: 'School Type',
                }),
                new CategoryFilter({
                  value: 'school_secondary',
                  label: 'State-funded secondary',
                  category: 'School Type',
                }),
              ],
            },
          },
          locations: [
            ...basicSubjectMeta.locations,
            new LocationFilter({
              value: 'barnsley',
              label: 'Barnsley',
              level: 'localAuthority',
            }),
          ],
        },
        results: [
          {
            filters: ['gender_female', 'school_primary'],
            timePeriod: '2015_AY',
            geographicLevel: 'Country',
            location: {
              country: {
                code: 'england',
                name: 'England',
              },
            },
            measures: {
              authAbsRate: '111',
              authAbsSess: '222',
            },
          },
          {
            filters: ['gender_female', 'school_secondary'],
            timePeriod: '2015_AY',
            geographicLevel: 'Country',
            location: {
              country: {
                code: 'england',
                name: 'England',
              },
            },
            measures: {
              authAbsRate: '333',
              authAbsSess: '444',
            },
          },
          {
            filters: ['gender_female', 'school_primary'],
            timePeriod: '2015_AY',
            geographicLevel: 'LocalAuthority',
            location: {
              localAuthority: {
                code: 'barnsley',
                name: 'Barnsley',
              },
            },
            measures: {
              authAbsRate: '555',
              authAbsSess: '666',
            },
          },
          {
            filters: ['gender_female', 'school_secondary'],
            timePeriod: '2015_AY',
            geographicLevel: 'LocalAuthority',
            location: {
              localAuthority: {
                code: 'barnsley',
                name: 'Barnsley',
              },
            },
            measures: {
              authAbsRate: '777',
              authAbsSess: '888',
            },
          },
        ],
      });

      expect(data).toHaveLength(5);

      expect(data[0]).toHaveLength(8);

      expect(data[1]).toHaveLength(8);
      expect(data[1][6]).toBe('111');
      expect(data[1][7]).toBe('222');

      expect(data[2]).toHaveLength(8);
      expect(data[2][6]).toBe('333');
      expect(data[2][7]).toBe('444');

      expect(data[3]).toHaveLength(8);
      expect(data[3][6]).toBe('555');
      expect(data[3][7]).toBe('666');

      expect(data[4]).toHaveLength(8);
      expect(data[4][6]).toBe('777');
      expect(data[4][7]).toBe('888');

      expect(data).toMatchSnapshot();
    });

    test("contains n/a's if there are some matching results", () => {
      const data = getCsvData({
        subjectMeta: {
          ...basicSubjectMeta,
          filters: {
            ...basicSubjectMeta.filters,
            'School Type': {
              name: 'school_type',
              options: [
                new CategoryFilter({
                  value: 'school_primary',
                  label: 'State-funded primary',
                  category: 'School Type',
                }),
                new CategoryFilter({
                  value: 'school_secondary',
                  label: 'State-funded secondary',
                  category: 'School Type',
                }),
              ],
            },
          },
        },
        results: [
          {
            filters: ['gender_female', 'school_primary'],
            timePeriod: '2015_AY',
            geographicLevel: 'Country',
            location: {
              country: {
                code: 'england',
                name: 'England',
              },
            },
            measures: {
              authAbsRate: '111',
              authAbsSess: '222',
            },
          },
        ],
      });

      expect(data).toHaveLength(3);

      expect(data[0]).toHaveLength(8);

      expect(data[1]).toHaveLength(8);
      expect(data[1][6]).toBe('111');
      expect(data[1][7]).toBe('222');

      expect(data[2]).toHaveLength(8);
      expect(data[2][6]).toBe('n/a');
      expect(data[2][7]).toBe('n/a');

      expect(data).toMatchSnapshot();
    });

    test("contains n/a's if there are no results", () => {
      const data = getCsvData({
        subjectMeta: basicSubjectMeta,
        results: [],
      });

      expect(data).toHaveLength(2);

      expect(data[0]).toHaveLength(7);

      expect(data[1]).toHaveLength(7);
      expect(data[1][5]).toBe('n/a');
      expect(data[1][6]).toBe('n/a');

      expect(data).toMatchSnapshot();
    });

    test("contains n/a's if matching result but no matching indicator", () => {
      const data = getCsvData({
        subjectMeta: basicSubjectMeta,
        results: [
          {
            filters: ['gender_female'],
            timePeriod: '2015_AY',
            geographicLevel: 'Country',
            location: {
              country: {
                code: 'england',
                name: 'England',
              },
            },
            measures: {
              authAbsSess: '111',
            },
          },
        ],
      });

      expect(data).toHaveLength(2);

      expect(data[0]).toHaveLength(7);

      expect(data[1]).toHaveLength(7);
      expect(data[1][5]).toBe('n/a');
      expect(data[1][6]).toBe('111');

      expect(data).toMatchSnapshot();
    });

    test('does not format values in any way', () => {
      const data = getCsvData({
        subjectMeta: basicSubjectMeta,
        results: [
          {
            filters: ['gender_female'],
            timePeriod: '2015_AY',
            geographicLevel: 'Country',
            location: {
              country: {
                code: 'england',
                name: 'England',
              },
            },
            measures: {
              authAbsRate: '12300000',
              authAbsSess: '44255667.2356',
            },
          },
        ],
      });

      expect(data).toHaveLength(2);

      expect(data[0]).toHaveLength(7);

      expect(data[1]).toHaveLength(7);
      expect(data[1][5]).toBe('12300000');
      expect(data[1][6]).toBe('44255667.2356');

      expect(data).toMatchSnapshot();
    });

    test('can contain suppressed cells', () => {
      const data = getCsvData({
        subjectMeta: basicSubjectMeta,
        results: [
          {
            filters: ['gender_female'],
            timePeriod: '2015_AY',
            geographicLevel: 'Country',
            location: {
              country: {
                code: 'england',
                name: 'England',
              },
            },
            measures: {
              authAbsRate: '13.4',
              authAbsSess: 'x',
            },
          },
        ],
      });

      expect(data).toHaveLength(2);

      expect(data[0]).toHaveLength(7);

      expect(data[1]).toHaveLength(7);
      expect(data[1][5]).toBe('13.4');
      expect(data[1][6]).toBe('x');

      expect(data).toMatchSnapshot();
    });
  });
});
